--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -26,7 +26,7 @@
     display: block;
     color: #266f14;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1%;
     text-decoration: none;
     font-size: 17px;
     margin: auto;
